More changes for sex variable...